# tauri-plugin-serial

./: Cargo.toml  README.md
.changes/: config.json  initial-release.md  readme.md
examples/vanilla/src-tauri/: Cargo.toml  tauri.conf.json
examples/vanilla/src-tauri/src/: main.rs
src/: command.rs  lib.rs  state.rs
