[package]
name = "tauri-plugin-serial"
version = "0.0.1"
authors = [ "craig@kaiserengineering.io" ]
description = "Serial plugin for the KE ShiftLight configuration tool."
edition = "2021"
rust-version = "1.59"
exclude = ["/examples"]

[dependencies]
tauri = { version = "2.0.0-alpha.2" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serialport = { version = "4.2.0", features = [] }
ts-rs = "6.2"
rusb = "0.9"
